Fixed HTML formatting

--- a/Mini_Project_Clustering.ipynb
+++ b/Mini_Project_Clustering.ipynb
@@ -247,16 +247,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
-    "<h3>Checkup Exercise Set I</h3>\n",
+    "### Checkup Exercise Set I\n",
     "\n",
-    "<p><b>Exercise:</b> Create a data frame where each row has the following columns (Use the pandas [`merge`](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.merge.html) and [`pivot_table`](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.pivot_table.html) functions for this purpose):\n",
-    "<ul>\n",
-    "<li> customer_name\n",
-    "<li> One column for each offer, with a 1 if the customer responded to the offer\n",
-    "</ul>\n",
-    "<p>Make sure you also deal with any weird values such as `NaN`. Read the documentation to develop your solution.</p>\n",
-    "</div>"
+    "Exercise: Create a data frame where each row has the following columns (Use the pandas [`merge`](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.merge.html) and [`pivot_table`](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.pivot_table.html) functions for this purpose):\n",
+    "\n",
+    "* customer_name\n",
+    "* One column for each offer, with a 1 if the customer responded to the offer\n",
+    "\n",
+    "Make sure you also deal with any weird values such as `NaN`. Read the documentation to develop your solution."
    ]
   },
   {
@@ -481,8 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
-    "<h3>Checkup Exercise Set II</h3>\n",
+    "### Checkup Exercise Set II\n",
     "\n",
     "<p><b>Exercise:</b></p> \n",
     "<ul>\n",
@@ -492,8 +489,7 @@
     "<li> Construct a plot showing $SS$ for each $K$ and pick $K$ using this plot. For simplicity, test $2 \\le K \\le 10$.\n",
     "<li> Make a bar chart showing the number of points in each cluster for k-means under the best $K$.\n",
     "<li> What challenges did you experience using the Elbow method to pick $K$?\n",
-    "</ul>\n",
-    "</div>"
+    "</ul>"
    ]
   },
   {
@@ -589,13 +585,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
-    "<h3>Checkup Exercise Set III</h3>\n",
+    "Checkup Exercise Set III\n",
     "\n",
-    "<p><b>Exercise:</b> Using the documentation for the `silhouette_score` function above, construct a series of silhouette plots like the ones in the article linked above.</p>\n",
+    "* Exercise: Using the documentation for the `silhouette_score` function above, construct a series of silhouette plots like the ones in the article linked above.\n",
     "\n",
-    "<p><b>Exercise:</b> Compute the average silhouette score for each $K$ and plot it. What $K$ does the plot suggest we should choose? Does it differ from what we found using the Elbow method?</p>\n",
-    "</div>"
+    "* Exercise: Compute the average silhouette score for each $K$ and plot it. What $K$ does the plot suggest we should choose? Does it differ from what we found using the Elbow method?"
    ]
   },
   {
@@ -758,27 +752,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
-    "<h3>Checkup Exercise Set IV</h3>\n",
+    "### Checkup Exercise Set IV\n",
     "\n",
-    "<p><b>Exercise:</b> Use PCA to plot your clusters:</p>\n",
+    "Exercise: Use PCA to plot your clusters:</p>\n",
     "\n",
-    "<ul>\n",
-    "<li> Use scikit-learn's [`PCA`](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html) function to reduce the dimensionality of your clustering data to 2 components\n",
-    "<li> Create a data frame with the following fields:\n",
-    "  <ul>\n",
-    "  <li> customer name\n",
-    "  <li> cluster id the customer belongs to\n",
-    "  <li> the two PCA components (label them `x` and `y`)\n",
-    "  </ul>\n",
-    "<li> Plot a scatterplot of the `x` vs `y` columns\n",
-    "<li> Color-code points differently based on cluster ID\n",
-    "<li> How do the clusters look? \n",
-    "<li> Based on what you see, what seems to be the best value for $K$? Moreover, which method of choosing $K$ seems to have produced the optimal result visually?\n",
-    "</ul>\n",
+    "* Use scikit-learn's [`PCA`](http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html) function to reduce the dimensionality of your clustering data to 2 components\n",
+    "* Create a data frame with the following fields:\n",
+    "  1. customer name\n",
+    "  2. cluster id the customer belongs to\n",
+    "  3. the two PCA components (label them `x` and `y`)\n",
+    "* Plot a scatterplot of the `x` vs `y` columns\n",
+    "* Color-code points differently based on cluster ID\n",
+    "* How do the clusters look? \n",
+    "* Based on what you see, what seems to be the best value for $K$? Moreover, which method of choosing $K$ seems to have produced the optimal result visually?\n",
     "\n",
-    "<p><b>Exercise:</b> Now look at both the original raw data about the offers and transactions and look at the fitted clusters. Tell a story about the clusters in context of the original data. For example, do the clusters correspond to wine variants or something else interesting?</p>\n",
-    "</div>"
+    "Exercise: Now look at both the original raw data about the offers and transactions and look at the fitted clusters. Tell a story about the clusters in context of the original data. For example, do the clusters correspond to wine variants or something else interesting?"
    ]
   },
   {
@@ -838,13 +826,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
-    "<h3>Exercise Set V</h3>\n",
+    "### Exercise Set V\n",
     "\n",
-    "<p>As we saw earlier, PCA has a lot of other uses. Since we wanted to visualize our data in 2 dimensions, restricted the number of dimensions to 2 in PCA. But what is the true optimal number of dimensions?</p>\n",
+    "As we saw earlier, PCA has a lot of other uses. Since we wanted to visualize our data in 2 dimensions, restricted the number of dimensions to 2 in PCA. But what is the true optimal number of dimensions?\n",
     "\n",
-    "<p><b>Exercise:</b> Using a new PCA object shown in the next cell, plot the `explained_variance_` field and look for the elbow point, the point where the curve's rate of descent seems to slow sharply. This value is one possible value for the optimal number of dimensions. What is it?</p>\n",
-    "</div>"
+    "**Exercise:** Using a new PCA object shown in the next cell, plot the `explained_variance_` field and look for the elbow point, the point where the curve's rate of descent seems to slow sharply. This value is one possible value for the optimal number of dimensions. What is it?"
    ]
   },
   {
@@ -917,83 +903,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clustering Algorithms in Scikit-learn\n",
-    "<table border=\"1\">\n",
-    "<colgroup>\n",
-    "<col width=\"15%\" />\n",
-    "<col width=\"16%\" />\n",
-    "<col width=\"20%\" />\n",
-    "<col width=\"27%\" />\n",
-    "<col width=\"22%\" />\n",
-    "</colgroup>\n",
-    "<thead valign=\"bottom\">\n",
-    "<tr><th>Method name</th>\n",
-    "<th>Parameters</th>\n",
-    "<th>Scalability</th>\n",
-    "<th>Use Case</th>\n",
-    "<th>Geometry (metric used)</th>\n",
-    "</tr>\n",
-    "</thead>\n",
-    "<tbody valign=\"top\">\n",
-    "<tr><td>K-Means</span></a></td>\n",
-    "<td>number of clusters</td>\n",
-    "<td>Very large<span class=\"pre\">n_samples</span>, medium <span class=\"pre\">n_clusters</span> with\n",
-    "MiniBatch code</td>\n",
-    "<td>General-purpose, even cluster size, flat geometry, not too many clusters</td>\n",
-    "<td>Distances between points</td>\n",
-    "</tr>\n",
-    "<tr><td>Affinity propagation</td>\n",
-    "<td>damping, sample preference</td>\n",
-    "<td>Not scalable with n_samples</td>\n",
-    "<td>Many clusters, uneven cluster size, non-flat geometry</td>\n",
-    "<td>Graph distance (e.g. nearest-neighbor graph)</td>\n",
-    "</tr>\n",
-    "<tr><td>Mean-shift</td>\n",
-    "<td>bandwidth</td>\n",
-    "<td>Not scalable with <span class=\"pre\">n_samples</span></td>\n",
-    "<td>Many clusters, uneven cluster size, non-flat geometry</td>\n",
-    "<td>Distances between points</td>\n",
-    "</tr>\n",
-    "<tr><td>Spectral clustering</td>\n",
-    "<td>number of clusters</td>\n",
-    "<td>Medium <span class=\"pre\">n_samples</span>, small <span class=\"pre\">n_clusters</span></td>\n",
-    "<td>Few clusters, even cluster size, non-flat geometry</td>\n",
-    "<td>Graph distance (e.g. nearest-neighbor graph)</td>\n",
-    "</tr>\n",
-    "<tr><td>Ward hierarchical clustering</td>\n",
-    "<td>number of clusters</td>\n",
-    "<td>Large <span class=\"pre\">n_samples</span> and <span class=\"pre\">n_clusters</span></td>\n",
-    "<td>Many clusters, possibly connectivity constraints</td>\n",
-    "<td>Distances between points</td>\n",
-    "</tr>\n",
-    "<tr><td>Agglomerative clustering</td>\n",
-    "<td>number of clusters, linkage type, distance</td>\n",
-    "<td>Large <span class=\"pre\">n_samples</span> and <span class=\"pre\">n_clusters</span></td>\n",
-    "<td>Many clusters, possibly connectivity constraints, non Euclidean\n",
-    "distances</td>\n",
-    "<td>Any pairwise distance</td>\n",
-    "</tr>\n",
-    "<tr><td>DBSCAN</td>\n",
-    "<td>neighborhood size</td>\n",
-    "<td>Very large <span class=\"pre\">n_samples</span>, medium <span class=\"pre\">n_clusters</span></td>\n",
-    "<td>Non-flat geometry, uneven cluster sizes</td>\n",
-    "<td>Distances between nearest points</td>\n",
-    "</tr>\n",
-    "<tr><td>Gaussian mixtures</td>\n",
-    "<td>many</td>\n",
-    "<td>Not scalable</td>\n",
-    "<td>Flat geometry, good for density estimation</td>\n",
-    "<td>Mahalanobis distances to  centers</td>\n",
-    "</tr>\n",
-    "<tr><td>Birch</td>\n",
-    "<td>branching factor, threshold, optional global clusterer.</td>\n",
-    "<td>Large <span class=\"pre\">n_clusters</span> and <span class=\"pre\">n_samples</span></td>\n",
-    "<td>Large dataset, outlier removal, data reduction.</td>\n",
-    "<td>Euclidean distance between points</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>\n",
-    "Source: http://scikit-learn.org/stable/modules/clustering.html"
+    "[Table of scikit-learn's clustering methods.](http://scikit-learn.org/stable/modules/clustering.html)"
    ]
   },
   {
